--- a/package.json
+++ b/package.json
@@ -1,87 +1,96 @@
 {
-  "name": "saturn-bail",
-  "version": "1.1.1",
-  "description": "Baileys",
-  "keywords": [
-    "whatsapp",
-    "js-whatsapp",
-    "whatsapp-api",
-    "whatsapp-web",
-    "whatsapp-chat",
-    "whatsapp-group",
-    "automation",
-    "multi-device"
-  ],
-  "license": "MIT",
-  "author": "Ace",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "files": [
-    "lib/*",
-    "WAProto/*",
-    "engine-requirements.js"
-  ],
-  "scripts": {
-    "changelog:last": "conventional-changelog -p angular -r 2",
-    "changelog:preview": "conventional-changelog -p angular -u",
-    "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-    "lint": "eslint src --ext .js,.ts",
-    "lint:fix": "yarn lint --fix",
-    "preinstall": "node ./engine-requirements.js",
-    "release": "release-it",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@hapi/boom": "^9.1.3",
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@cacheable/node-cache": "1.5.3", 
-    "@itsukichan/eslint-config": "^1.0.0", 
-    "@itsukichan/libsignal-node": "^1.0.1", 
-    "async-mutex": "^0.5.0",
-    "axios": "^1.12.1",
-    "audio-decode": "^2.2.2", 
-    "cache-manager": "^5.7.6", 
-    "fflate": "^0.8.2", 
-    "lodash": "^4.17.21",
-    "link-preview-js": "^3.0.14", 
-    "lru-cache": "^11.1.0", 
-    "music-metadata": "^7.12.3",
-    "pino": "^9.6",
-    "protobufjs": "^7.2.4",
-    "qrcode-terminal": "^0.12.0", 
-    "ws": "^8.13.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^16.0.0",
-    "@types/ws": "^8.0.0",
-    "conventional-changelog-cli": "^2.2.2",
-    "eslint": "^8.0.0",
-    "jest": "^30.1.1",
-    "jimp": "^0.22.12",
-    "json": "^11.0.0",
-    "link-preview-js": "^3.0.5",
-    "open": "^8.4.2",
-    "release-it": "^15.10.3",
-    "ts-jest": "^29.4.1",
-    "ts-node": "^10.8.1",
-    "typedoc": "^0.27.9",
-    "typedoc-plugin-markdown": "4.4.2",
-    "typescript": "^5.8.2"
-  },
-  "peerDependencies": {
-    "jimp": "^0.22.12"
-  },
-  "peerDependenciesMeta": {
-    "jimp": {
-      "optional": true
+    "name": "saturn-bail",
+    "version": "1.1.1",
+    "description": "777",
+    "license": "MIT",
+    "author": "Ace",
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "files": [
+        "lib/*",
+        "WAProto/*.js",
+        "engine-requirements.js"
+    ],
+    "scripts": {
+        "build:all": "tsc && typedoc",
+        "build:docs": "typedoc",
+        "build:tsc": "tsc",
+        "changelog:last": "conventional-changelog -p angular -r 2",
+        "changelog:preview": "conventional-changelog -p angular -u",
+        "gen:protobuf": "sh WAProto/GenerateStatics.sh",
+        "lint": "eslint src --ext .js,.ts,.jsx,.tsx",
+        "lint:fix": "eslint src --fix --ext .js,.ts,.jsx,.tsx",
+        "prepack": "",
+        "prepare": "",
+        "preinstall": "node ./engine-requirements.js",
+        "release": "release-it",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@adiwajshing/keyed-db": "^0.2.4",
+        "@hapi/boom": "^9.1.3",
+        "@cacheable/node-cache": "^1.4.0",
+        "async-mutex": "^0.5.0",
+        "audio-decode": "^2.1.3",
+        "axios": "^1.3.3",
+        "cache-manager": "4.0.1",
+        "chalk": "^4.1.2",
+        "futoin-hkdf": "^1.5.1",
+        "libphonenumber-js": "^1.10.20",
+        "lodash": "^4.17.21",
+        "libsignal": "npm:@shennmine/libsignal-node",
+        "music-metadata": "^7.12.3",
+        "node-cache": "^5.1.2",
+        "node-fetch": "^2.6.1",
+        "pino": "^7.0.0",
+        "protobufjs": "^7.2.4",
+        "uuid": "^9.0.0",
+        "ws": "^8.13.0"
+    },
+    "devDependencies": {
+        "@adiwajshing/eslint-config": "github:adiwajshing/eslint-config",
+        "@types/got": "^9.6.11",
+        "@types/jest": "^27.5.1",
+        "@types/node": "^16.0.0",
+        "@types/sharp": "^0.29.4",
+        "@types/ws": "^8.0.0",
+        "conventional-changelog-cli": "^2.2.2",
+        "eslint": "^8.0.0",
+        "jest": "^27.0.6",
+        "jimp": "^0.16.1",
+        "link-preview-js": "^3.0.0",
+        "open": "^8.4.2",
+        "qrcode-terminal": "^0.12.0",
+        "release-it": "^15.10.3",
+        "sharp": "^0.30.5",
+        "ts-jest": "^27.0.3",
+        "ts-node": "^10.8.1",
+        "typedoc": "^0.24.7",
+        "typescript": "^4.6.4", 
+        "json": "^11.0.0"
+    },
+    "peerDependencies": {
+        "jimp": "^0.16.1",
+        "link-preview-js": "^3.0.0",
+        "qrcode-terminal": "^0.12.0",
+        "sharp": "^0.32.2"
+    },
+    "peerDependenciesMeta": {
+        "jimp": {
+            "optional": true
+        },
+        "link-preview-js": {
+            "optional": true
+        },
+        "qrcode-terminal": {
+            "optional": true
+        },
+        "sharp": {
+            "optional": true
+        }
+    },
+    "packageManager": "yarn@1.22.19",
+    "engines": {
+        "node": ">=20.0.0"
     }
-  },
-  "packageManager": "yarn@1.22.19",
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "directories": {
-    "lib": "lib"
-  }
 }
